[gd_scene load_steps=4 format=2]

[ext_resource path="res://bone.png" type="Texture" id=1]
[ext_resource path="res://Bone.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.13743
height = 12.5877

[node name="Bone" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
z_index = 1
collision_layer = 16
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="SDTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="MaterializeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="SDTimer" to="." method="_on_SDTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="MaterializeTimer" to="." method="_on_MaterializeTimer_timeout"]
